# Variable_Importance

./: LICENSE  README.md  Tutorial.ipynb  compute_simulations.R  compute_simulations_py.py  dcrt.py  networks.py  plot_simulations_all.R  process_age_prediction_CamCAN.py  requirements_conda.yml  requirements_r.rda  utils_dcrt.py  utils_lazy.py
BBI_package/: LICENSE  pyproject.toml
BBI_package/src/BBI/: BBI.py  Dnn_learner.py  Dnn_learner_single.py  __init__.py  compute_importance.py  utils.py
camcan/: Result_single_FREQ_all_imp_outer_10_inner.csv
code_dcrt/: README.md  setup.py
data/: data_gen.R
permfit_python/: .gitignore  compute_perm_conditional_standard.py  permfit_py.py  permfit_py_RF.py  utils.py
results/: fix_fig_full_plot.R  fix_fig_full_plot_Mi.R  fix_fig_increasing.R
sandbox/: alternatives.py  data_simulation.py  dcrt.py  dcrt_old.py  deep_model.py  deep_model_new.py  gaussian_knockoff.py  inflate_non_null.c  permfit_py.py  sampling_covariance_fast.c  sampling_covariance_fast.pyx  stat_lambda_path.py  utils.py
ukbb/: .gitignore  process_age_single.py  process_alcohol_single.py  process_intelligence_single.py  process_met_single.py  process_neuroticism_single.py  process_sleep_single.py  process_smoke_single.py  ukbb_data_age_no_hot_encoding_binary_columns.csv  ukbb_data_age_no_hot_encoding_nominal_columns.csv  ukbb_data_age_no_hot_encoding_ordinal_columns.csv  utils_py.py
utils/: compute_methods.R  gimp.R  networks.py  plot_methods_all.R  plot_methods_all_Mi.R  plot_methods_all_increasing_combine.R  utils_lazy.py  utils_py.py
(+102 files in other folders)
