[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "BBI"
version = "0.0.0"
authors = [
  { name="Ahmad Chamma", email="ahmad.chamma@inria.fr" },
]
description = "Blocked-based statiscally validated importance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "isort"]

